tests/error/comptime/pointer_difference11.bz
// error: invalid pointer difference operation with type '*int32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different subobjects in this global object
// note: lhs address points to a subobject at offset 0
// note: rhs address points to a subobject at offset 24
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		consteval t = [ 0, "", 0 ];
		&t[0] - &t[2];
	});
}
